# yadia

./: .replit  CNAME  Pasted--Am-liore-le-design-de-la-page-des-r-sultats-d-audit-IA-pour-la-rendre-plus-professionnelle-vende-1734367588096.txt  Pasted--Cr-e-un-formulaire-bien-structur-avec-les-champs-suivants-Nom-input-texte-obligatoire--1734361296016.txt  Pasted--Cr-e-une-version-visuellement-am-lior-e-et-structur-e-des-articles-existants-en-int-grant-les-l-m-1734366112032.txt  Pasted--Je-veux-que-tu-modifies-la-page-Propos-de-mon-site-pour-transmettre-proximit-storytelling-puis-1734351677743.txt  Pasted--Section-2-Notre-Mission-Ajoute-deux-carr-s-align-s-horizontalement-style-cards-avec-un-l-ge-1734339934617.txt  Pasted--Yadia-specializes-in-AI-solutions-and-I-want-the-site-to-embody-a-modern-premium-and-futuristic--1733868536042.txt  Pasted-1-Secteur-Ressources-Humaines-Optimisez-votre-recrutement-avec-l-IA-Tri-des-CV-et-s-lection--1734364337346.txt  Pasted-Ajoute-une-fonctionnalit-suppl-mentaire-la-page-d-audit-pr-c-demment-d-velopp-e-Voici-les-tapes-1734361503374.txt  Pasted-I-am-building-a-website-for-my-company-Yadia-which-specializes-in-artificial-intelligence-AI-solu-1733867826322.txt  Pasted-I-have-a-homepage-for-my-company-Yadia-which-specializes-in-AI-solutions-The-design-and-layout-ar-1733869677120.txt  Pasted-La-R-volution-de-la-Comptabilit-par-l-IA-Automatisation-et-Pr-cision-en-2024-La-comptabilit-tra-1734365004379.txt  Pasted-La-page-est-divis-e-en-sections-claires-et-l-gantes-Utilise-HTML-CSS-et-un-peu-de-JavaScript-pou-1734360915957.txt  ai_audit.py  (+25 more)
(+22 files in other folders)
